--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -7,15 +7,15 @@
         <%= render 'shared/errors_messages', model: form.object %>
         <div class='form-group'>
           <label for='user_email'><%= User.human_attribute_name(:email) %></label>
-          <%= form.email_field :email, class: 'form-control', id: 'user_email' %>
+          <%= form.email_field :email, class: 'form-control' %>
         </div>
         <div class='form-group'>
           <label for='user_last_name'><%= User.human_attribute_name(:last_name) %></label>
-          <%= form.text_field :last_name, class: 'form-control', id: 'user_last_name' %>
+          <%= form.text_field :last_name, class: 'form-control' %>
         </div>
         <div class='form-group'>
           <label for='user_first_name'><%= User.human_attribute_name(:first_name) %></label>
-          <%= form.text_field :first_name, class: 'form-control', id: 'user_first_name' %>
+          <%= form.text_field :first_name, class: 'form-control' %>
         </div>
         <%= form.file_field :user_image, class: 'form-control', id: 'js-common-img' %>
         <div class='mt-3 mb-3'>
