--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class=' col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
       <h1>パスワードリセット</h1>
-      <%= form_with model: @user, url: password_reset_path(@token) do |f| %>
+      <%= form_with model: @user, url: password_reset_path(@token), local: true do |f| %>
         <div class="field">
           <%= f.label :email %>
           <%= @user.email %>
